+ added edits after first review

--- a/Documentation/fazit.tex
+++ b/Documentation/fazit.tex
@@ -1,6 +1,6 @@
 \chapter{Fazit}
 Prinzipiell kann gesagt werden, dass in den meisten Fällen die \textsc{SetlX}-Programme, mit Hilfe des 
-lecture-Moduls, in Python gleich programmiert werden können. Die Syntax beider Sprachen unterscheidet 
+lecture-Moduls, in Python ähnlich programmiert werden können. Die Syntax beider Sprachen unterscheidet 
 sich stellenweise und manchmal muss ein Ausdruck nach einem anderen Schema aufgebaut werden. 
 Jedoch bieten beide Sprachen für viele Aufgaben geeignete Methoden die eine einfache Problemlösung ermöglichen. 
 
