--- a/Documentation/warum_python.tex
+++ b/Documentation/warum_python.tex
@@ -2,8 +2,8 @@
 
 Viele Informatik-Kurse oder Vorlesungen für Anfänger benutzen die Programmiersprache Python als erste 
 Programmiersprache. Von den 39 besten Einführungskursen für Informatik in den USA verwendeten im Jahr 2014 
-27 Kurse Python als erste Programmiersprache. ~\cite{Guo14} Mit 69\% ist Python somit mit einer 
-eindeutigen Mehrheit deutlich die meist verwendete Programmiersprache unter diesen Kursen. Einige 
+27 Kurse Python als erste Programmiersprache. ~\cite{Guo14} Mit 69\% ist Python somit, mit einer 
+eindeutigen Mehrheit die meist verwendete Programmiersprache unter diesen Kursen. Einige 
 Internet-Artikel, die die Beliebtheit von heutigen Programmiersprachen beleuchten, referenzieren öfter 
 den Blogbeitrag für die Association for Computing Machinery (ACM). In dem Beitrag wird beschrieben, dass 
 Python Java als häufigste Programmiersprache für Anfänger abgelöst hat. Auch wenn der Artikel bereits 
