--- a/Documentation/nur_python.tex
+++ b/Documentation/nur_python.tex
@@ -4,6 +4,14 @@ Es ist bereits möglich einige \textsc{SetlX}-Programme ohne zusätzliche Module i
 anzufertigen. Diese Python-Skripte wurden als erstes angefertigt, um feststellen zu können, ob es möglich ist 
 Python Syntax zu verwenden, ohne die Eleganz des Codes zu verlieren.
 
+Beim Schreiben von Python-Skripten muss, im Gegensatz zu \textsc{SetlX}, bei der Einrückung auf eine 
+Besonderheit geachtet werden. In Python ist es möglich sogenannte unsichtbare Fehler zu erhalten, 
+indem man eine inkonsistente Einrückung verwendet. Es ist möglich sowohl mit Leerzeichen, 
+als auch mit Tabulatoren die Einrückung zu gestalten. Was jedoch verboten ist, 
+ist die Verwendung beider Arten gleichzeitig, da Python daraufhin auf einen Fehler stößt. 
+Deshalb ist es wichtig bereits am Anfang festzulegen, ob mit Leerzeichen oder mit Tabulatoren eingerückt wird. 
+Alle Python-Skripte, die im Rahmen dieser Arbeit erstellt wurden, werden Leerzeichen zur Einrückung verwendet.
+
 Das erste Codebeispiel aus dem Logik-Skript befasst sich mit der Berechnung einer Summe der Zahlen von 1 
 bis zur eingegebenen Zahl. Dieses Programm lässt sich auch nahezu identisch in Python abbilden. 
 Das originale \textsc{SetlX} Programm verwendet hierfür eine Menge, die die Zahlen von 1 bis zur 
